added basic logic to index.js

--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
 
     <section class="selection">
       <div class="rock">
-        <button class="select-item">rock</button>
+        <button id="rock">rock</button>
       </div>
       <div class="paper">
-        <button class="select-item">paper</button>
+        <button id="paper">paper</button>
       </div>
       <div class="scissor">
-        <button class="select-item">scissor</button>
+        <button id="scissor">scissor</button>
       </div>
     </section>
 
     <section class="results">
-      <div id="human">
-        <h3>Human</h3>
-        <h4>selection: <span id="human-selection"></span></h4>
-        <h4>score: <span id="human-score"></span></h4>
+      <div id="user">
+        <h3>User</h3>
+        <h4>selection: <span id="user-selection"></span></h4>
       </div>
 
       <div id="computer">
         <h3>Computer</h3>
         <h4>selection: <span id="computer-selection"></span></h4>
-        <h4>score: <span id="computer-score"></span></h4>
       </div>
+
+      <h3 id="result"></h3>
     </section>
 
     <script src="./assets/index.js" />
