--- a/index.html
+++ b/index.html
@@ -9,35 +9,42 @@
   </head>
   <body>
     <header>
-      <h1>Rock paper scissors</h1>
+      <h1 class="main-title">Rock paper scissors</h1>
     </header>
 
     <section class="selection">
       <div class="rock">
-        <button id="rock">rock</button>
+        <img
+          src="./assets/Images/rock.png"
+          id="rock"
+          alt="rock"
+          class="rock-img"
+        />
       </div>
       <div class="paper">
-        <button id="paper">paper</button>
+        <img src="./assets/Images/paper.png" id="paper" alt="paper" />
       </div>
       <div class="scissor">
-        <button id="scissor">scissor</button>
+        <img src="./assets/Images/scissors.png" id="scissors" alt="scissor" />
       </div>
     </section>
 
     <section class="results">
       <div id="user">
         <h3>User</h3>
-        <h4>selection: <span id="user-selection"></span></h4>
+        <div id="user-selection"></div>
       </div>
 
       <div id="computer">
         <h3>Computer</h3>
-        <h4>selection: <span id="computer-selection"></span></h4>
+        <div id="computer-selection"></div>
       </div>
-
-      <h3 id="result"></h3>
     </section>
 
-    <script src="./assets/index.js" />
+    <h3 class="result">
+      <span class="result"></span><span class="result"></span>
+    </h3>
+
+    <script src="./assets/index.js"></script>
   </body>
 </html>
